fixed issues::